--- a/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
@@ -81,14 +81,14 @@
                                 <rect key="frame" x="0.0" y="300" width="375" height="367"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="weatherCell" rowHeight="71" id="9gB-1f-3c3">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="weatherCell" rowHeight="71" id="9gB-1f-3c3" customClass="WeatherCell" customModule="WeatherApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="71"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9gB-1f-3c3" id="8ju-p4-7Pa">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="som-PS-z7E">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="som-PS-z7E">
                                                     <rect key="frame" x="8" y="10" width="50" height="50.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="Nw0-od-akh"/>
@@ -145,6 +145,13 @@
                                                 <constraint firstItem="som-PS-z7E" firstAttribute="leading" secondItem="8ju-p4-7Pa" secondAttribute="leading" constant="8" id="vsP-vf-mYR"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dayLabel" destination="Tqb-p8-Aea" id="7O3-8j-QIi"/>
+                                            <outlet property="highTemp" destination="m8Y-I0-q3R" id="ZVZ-Pf-hDB"/>
+                                            <outlet property="lowTemp" destination="CSE-W0-r8M" id="HUV-kN-0R9"/>
+                                            <outlet property="weatherIcon" destination="som-PS-z7E" id="c9F-C1-VAe"/>
+                                            <outlet property="weatherType" destination="g1C-WS-Aws" id="6bl-FS-UIR"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
